--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="corplawicon.ico">
+  <meta name="description" content="Bradley Pham's Resume">
+  <meta name="author" content="862076263">
 
-  <title>John Doe - Business Administration</title>
+  <title>Bradley Pham - Pre Law</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Bradley Pham</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="phambradley.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Bradley Pham
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Pre-Law</div>
+        <p class="lead mb-4">"Yesterday is history, tomorrow is a mystery...<br><br>
 
-        Enter bio here<br><br>
+        And today is a gift, that is why they call it the present." - Master Oogway<br><br>
 
-        Enter bio here
+        As an aspiring lawyer, my goal is to fight for the future, rewrite history, all to make the present a beautiful place to live in. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/bradmeey/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/bpham025">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/bradmeeeey">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:pham.bradley@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,52 +92,77 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Optical Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Haleh Guilak Inc. - Temecula/Murrieta/San Jacinto</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Assist the attending physician(s) in treatment and diagnosis of ocular diseases during medical office visits.<br> 
+              • Attend incoming patients (appointments/ walk-ins) and efficiently communicate with patient insurances.<br>
+              • Perform pre-test examinations: Autorefractions, NCT (glaucoma) test, Retinal Imaging, and dilations.<br>
+              • Manage billing, payments, and claims while submitting orders for prescription glasses and contacts lenses.<br>
+              • Manage scheduling between three private clinics through phone calls and Drchrono program.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Researcher</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Department of Nematology - UCR</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assist in experiments regarding plant resistance and susceptibility to nematode/environmental factors.<br>
+              • Conduct lab experiments: DNA extraction and measurement, PCR, gene sequencing, etc.<br>
+              • Utilize and organize spreadsheets to document and save experimental data.<br>
+              • Preserve nematode colonies within the Nematode Isolation and Quarantine Facility using liquid nitrogen, plant roots, petri-dishes, etc.<br>
+              • Prepare experiments: potting soil, managing water-lines, isolating nematode colonies, cooking agar, creating soil mixes in the glasshouses, etc.<br>
+              • Maintain order and cleanliness of lab environments: placing orders for equipment, sterilizing tools, etc.<br>
+              • Supervise and train newer student researchers and aid them in experimental procedures.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">November 2018 - June 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">AMSA Social Committee Chairman</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">American Medical Student Association - UCR</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Effeciently communicated and coordinated with other chair members to co-host clinical volunteer events.<br>
+            • Directed and allocated tasks to committee members during general or social events.<br>
+            • Organized major events such as AMSA Banquet, Sports Socials, and the AMSA Retreat. <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">November 2018 - November 2019</span>
           </div>
         </div>
 
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Dental Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">ABC Dental - Placentia</a></div>
+            <p>
+            • Assisted attending physician in dental procedures including root canals, gum surgery, and tooth extractions.<br>
+            • Attended and situated patients on clinical chairs.<br>
+            • Prepared patients for dental procedures by completing X-ray scans prepping clinical chairs.<br>
+            • Maintained high levels of hygiene sterilizing surgical tools, rewrapping clinical chairs, mopping floors.<br>
+            • Managed claims and insurances through data entry and logging patient reports.<br>
+            • Served as a front desk receptionist and greeted nervous patients with a smile.<br>
+
+          </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2018 - November 2019</span>
+          </div>
+        </div>
+            
 
       </div>
 
@@ -152,33 +177,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Science in Biology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +193,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="DRG1.jpeg" width="500px">
+            <img src="DRG2.jpeg" width="500px"><br>
+            <img src="NMLAB1.jpeg" width="500px">
+            <img src="NMLAB2.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +204,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Bradley Pham</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
